[package]
name = "overlay-map"
version = "0.1.4"
edition = "2024"
authors = ["James Kingsley <jameslkingsley@icloud.com>"]
description = "A two-layered map data structure for Rust that tracks current and previous values for each key — with zero-clone, in-place state transitions."
license = "MIT"
repository = "https://github.com/jameslkingsley/overlay-map"
documentation = "https://docs.rs/overlay-map"
homepage = "https://github.com/jameslkingsley/overlay-map"
readme = "README.md"
keywords = ["map", "data-structure", "overlay", "two-layer"]
categories = ["data-structures"]

[[bench]]
name = "overlaymap"
harness = false

[[bench]]
name = "overlay"
harness = false

[[bench]]
name = "compare"
harness = false

[dependencies]
hashbrown = "0.15.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.18"
nohash-hasher = "0.2.0"
rand = "0.9.0"
